dashboard/accounts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-lb
  namespace: kubernetes-dashboard
spec:
  type: ClusterIP
  selector:
    app: kubernetes-dashboard-kong
  ports:
    - port: 443
      targetPort: 8443
